@@ -90,6 +90,19 @@ subprojects {
             }
         }
 
+        test {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                jvmArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
         jar {
             inputs.property("moduleName", moduleName)
             manifest {
@@ -97,6 +110,7 @@ subprojects {
                 attributes('Automatic-Module-Name': moduleName)
             }
         }
+
     }
 
 }
